# FlexGP

./: .gitignore  CUSTOM_DATASET_RULES.md  FGP_main.py  README.md  bootstrap.sh  custom_LYMPH_preprocessing.py  dataset_structure.md  generate_images.py  generic_dataset_preprocessing.py  main_training.py  params.toml  pipeline.py  pyproject.toml  test_GP.py
models/: model_2026-05-01_00-28-28.pkl  modello_full.pkl
preprocessed_dataset/: sampled_demo_positive_patches.npy  sampled_linfonodi_test_label.npy  sampled_linfonodi_train_label.npy  split_report.txt
